--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -28,6 +28,7 @@
     <script src="lib/angular-cookies/angular-cookies.min.js"></script>
 	<script src="lib/query-string/query-string.js"></script>
 	<script src="lib/angular-oauth2/dist/angular-oauth2.min.js"></script>
+	<script src="lib/angular-resource/angular-resource.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -37,6 +38,14 @@
     
     <!-- CONTROLLER'S -->
     <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/client/checkout.js"></script>
+    <script src="js/controllers/client/checkoutDetail.js"></script>
+    <script src="js/controllers/client/viewProducts.js"></script>
+    
+    <!-- SERVICE'S -->
+    <script src="js/services/product.js"></script>
+    <script src="js/services/localStorage.js"></script>
+    <script src="js/services/cart.js"></script>
   </head>
   <body ng-app="starter">
 
