--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -40,12 +40,14 @@
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/client/checkout.js"></script>
     <script src="js/controllers/client/checkoutDetail.js"></script>
+    <script src="js/controllers/client/checkoutSuccessful.js"></script>
     <script src="js/controllers/client/viewProducts.js"></script>
     
     <!-- SERVICE'S -->
-    <script src="js/services/product.js"></script>
     <script src="js/services/localStorage.js"></script>
     <script src="js/services/cart.js"></script>
+    <script src="js/services/product.js"></script>
+    <script src="js/services/order.js"></script>
   </head>
   <body ng-app="starter">
 
