Adicionado funcionalidade de cupom ao carrinho. Iniciado implementação de cupom no checkout.

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -48,6 +48,7 @@
     <script src="js/services/cart.js"></script>
     <script src="js/services/product.js"></script>
     <script src="js/services/order.js"></script>
+    <script src="js/services/cupom.js"></script>
   </head>
   <body ng-app="starter">
 
