Finalizado "Meus pedidos" na app da parte do cliente;
Adicionado filter para data;
Criado controller viewOrder e view para visualização dos pedidos feitos;
Ajustado redirecionamentos da app;

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -45,6 +45,7 @@
     <script src="js/controllers/client/checkoutSuccessful.js"></script>
     <script src="js/controllers/client/viewProducts.js"></script>
     <script src="js/controllers/client/order.js"></script>
+    <script src="js/controllers/client/viewOrder.js"></script>
     
     <!-- SERVICE'S -->
     <script src="js/services/localStorage.js"></script>
@@ -53,6 +54,9 @@
     <script src="js/services/order.js"></script>
     <script src="js/services/cupom.js"></script>
     <script src="js/services/user.js"></script>
+    
+    <!-- FILTER'S -->
+    <script src="js/filters/join.js"></script>
   </head>
   <body ng-app="starter">
 
