--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -46,6 +46,9 @@
     <script src="js/controllers/client/viewProducts.js"></script>
     <script src="js/controllers/client/order.js"></script>
     <script src="js/controllers/client/viewOrder.js"></script>
+    <script src="js/controllers/deliveryman/menu.js"></script>
+    <script src="js/controllers/deliveryman/order.js"></script>
+    <script src="js/controllers/deliveryman/viewOrder.js"></script>
     
     <!-- SERVICE'S -->
     <script src="js/services/localStorage.js"></script>
