--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -57,6 +57,7 @@
     <script src="js/services/order.js"></script>
     <script src="js/services/cupom.js"></script>
     <script src="js/services/user.js"></script>
+    <script src="js/services/userData.js"></script>
     
     <!-- FILTER'S -->
     <script src="js/filters/join.js"></script>
