--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -26,6 +26,7 @@
 	<script src="lib/jquery/dist/jquery.min.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic-cloud/ionic.cloud.min.js"></script>
     <script src="lib/angular-cookies/angular-cookies.min.js"></script>
 	<script src="lib/query-string/query-string.js"></script>
 	<script src="lib/angular-oauth2/dist/angular-oauth2.min.js"></script>
